RESOLVED FIXED66554
[GTK]Fix compilation issue in WebKitTestRunner
https://bugs.webkit.org/show_bug.cgi?id=66554
Summary [GTK]Fix compilation issue in WebKitTestRunner
Amruth Raj
Reported 2011-08-19 06:52:36 PDT
Fix compilation issue in WebKitTestRunner caused after https://bugs.webkit.org/show_bug.cgi?id=66494
Attachments
Include cstdio header (1001 bytes, patch)
2011-08-19 06:59 PDT, Amruth Raj
no flags
Amruth Raj
Comment 1 2011-08-19 06:59:25 PDT
Created attachment 104507 [details] Include cstdio header Fix the following errors: CXX Tools/WebKitTestRunner/Programs_WebKitTestRunner-PixelDumpSupport.o /bin/mkdir -p ./.deps/DerivedSources ../../Tools/WebKitTestRunner/PixelDumpSupport.cpp: In function ‘void printPNG(const unsigned char*, size_t, const char*)’: ../../Tools/WebKitTestRunner/PixelDumpSupport.cpp:74:45: error: ‘printf’ was not declared in this scope ../../Tools/WebKitTestRunner/PixelDumpSupport.cpp:79:35: error: ‘stdout’ was not declared in this scope ../../Tools/WebKitTestRunner/PixelDumpSupport.cpp:79:41: error: ‘fwrite’ was not declared in this scope
WebKit Review Bot
Comment 2 2011-08-19 08:29:20 PDT
Comment on attachment 104507 [details] Include cstdio header Clearing flags on attachment: 104507 Committed r93412: <http://trac.webkit.org/changeset/93412>
WebKit Review Bot
Comment 3 2011-08-19 08:29:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.