Fix compilation issue in WebKitTestRunner https://bugs.webkit.org/show_bug.cgi?id=66554

Patch by Amruth Raj <amruthraj@motorola.com> on 2011-08-19
Reviewed by Martin Robinson.

* WebKitTestRunner/PixelDumpSupport.cpp:

Canonical link: https://commits.webkit.org/82402@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93412 268f45cc-cd09-0410-ab3c-d52691b4dbfc